--- a/frontend/src/Components/Chat/Chat.css
+++ b/frontend/src/Components/Chat/Chat.css
@@ -1,29 +1,48 @@
 .chat-container {
-  position: absolute;
+  z-index: 1000;
+  position: fixed;
+  right: 250px;
+  height: 100%;
+  margin-right: -250px;
+  overflow-y: auto;
   background: none;
-  z-index: 2;
-  top: 50%;
-  margin: 10px;
-  width: 50px;
-  height: 500px;  
+  display: flex;
+  flex-direction: column-reverse;
 }
 
+.chat-room {
+  margin: 10px;
+}
 
 .chat-avatar {
   vertical-align: middle;
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  padding: 5px;
 }
 
 .chat-info {
   display: flex;
   flex-direction: column;
-
 }
 
-.chat-textarea {
-  background: wheat;
+.chat-info-container {
+  display: flex;
   width: 200px;
+}
 
+.chat-message {
+  background: var(--color-1);
+  padding: 5px;
+  height: 200px;
+  border-radius: 15px;
+}
+
+.chat-msg {
+  color: var(--color-8);
+}
+
+.chat-send {
+  display: flex;
 }
